--- a/static/sass/nquire-it/variables/_colors.scss
+++ b/static/sass/nquire-it/variables/_colors.scss
@@ -14,7 +14,9 @@ $color-placeholder: #a2a2a2;
 $color-header-search-box: #c2c2c2;
 $color-header-search-focus: #777;
 
-$color-orange: #f39a19;
+// nQuire-it orange(s).
+$color-orange: #f39a19;  // Fail(AA) - ok for borders.
+$color-dark-orange: #cd6f14;
 
 $color-mission-senseit: #079ccb;
 $color-mission-spotit: #9fa609;
